refactor permission concept into service layer, add dummy endpoints